[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiida-hyperqueue"
dynamic = ['version']
authors = [
  {name = "Marnik Bercx"},
  {name = "Jusong Yu"},
]
description = "AiiDA plugin for the HyperQueue metascheduler"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Framework :: AiiDA",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Natural Language :: English",
    "Programming Language :: Python",
]
requires-python = ">=3.9"

dependencies = [
    "aiida-core~=2.0,<2.7",
]

[project.urls]
Source = "https://github.com/aiidateam/aiida-hyperqueue"

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-design",
    "sphinx-book-theme",
    "sphinxcontrib-details-directive~=0.1.0"
]
tests = [
    "pgtest~=1.3.1",
    "coverage~=7.0",
    "pytest~=7.0",
    "pytest-cov~=4.1",
]
pre-commit = [
    "pre-commit~=3.5",
    'mypy~=1.10.0',
]

[project.entry-points.'aiida.schedulers']
"hyperqueue" = "aiida_hyperqueue.scheduler:HyperQueueScheduler"

[project.scripts]
aiida-hq = 'aiida_hyperqueue.cli:cmd_root'

[tool.pytest.ini_options]
python_files = "test_*.py example_*.py"
filterwarnings = [
    'ignore:Creating AiiDA configuration folder.*:UserWarning',
]
